k/traefik/patch-service-tailscale.yaml
#ManagedBy: cue

apiVersion: v1
kind: Service
metadata:
  name: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.defn.run
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
