k/traefik/resource-ingressroute-http-to-https.yaml
#ManagedBy: cue

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http-to-https
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{subdomain:[a-zA-Z0-9-]+}.defn.run`)
      kind: Rule
      middlewares:
        - name: http-to-https
